--- a/index.html
+++ b/index.html
@@ -86,6 +86,66 @@
         <button>Learn More</button>
        </div>
    </section>
+  <section class ="state">
+    <div class="state-heading">
+
+        <div class="state-tagline">
+           <h2>Helping a local <div class="span">business reinvent itself</span></h2>
+           <p>We reached here with our hard work and dedication</p>
+        </div>
+
+    </div>
+     <div class="state-numbers">
+        <ul class="flex-ul">
+            <li>
+                <img src="./assets/member.svg" alt="">
+                <div>
+                    <h3>2,245,431</h3>
+                     <p>Members</p>
+                </div>
+            </li>
+
+            <li>
+                <img src="./assets/club-number.svg" alt="">
+                <div>
+                    <h3>46,328</h3>
+                     <p>Clubs</p>
+                </div>
+            </li>
+
+            <li> 
+                <img src="./assets/event-numbers.svg" alt="">
+                <div>
+                    <h3>828,867</h3>
+                     <p>Event Bookings
+
+                     </p>
+                </div>
+            </li>
+
+            <li>
+                <img src="./assets/payments.svg" alt="">
+                <div>
+                    <h3>1,926,436</h3>
+                     <p>Payments</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+   </section>
+
+      <section class="design-tagline">
+        <div class="phone-women">
+            <img src="./assets/phone-women.svg" alt="" width="450px">
+        </div>
+        <div class="design-content">
+            <h2>How to design your site footer like we did</h2>
+            <p>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.  </p>
+            <button>Learn More</button>
+        </div>
+
+    </section>
    
 </body>
 </html>
